save data into db

--- a/explore-and-data-analisis.ipynb
+++ b/explore-and-data-analisis.ipynb
@@ -14,16 +14,17 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pyarrow.parquet as pq\n",
+    "import json\n",
     "import glob\n",
     "import os\n",
+    "from datetime import date, datetime\n",
     "\n",
     "\n",
     "extracted_folder_path = \"./data\"\n",
     "parquet_files = glob.glob(os.path.join(extracted_folder_path, '*.parquet'))\n",
     "\n",
     "\n",
-    "dataframes = [pd.read_parquet(file) for file in parquet_files]\n",
+    "dataframes = [pd.read_parquet(file).head() for file in parquet_files]\n",
     "combined_df = pd.concat(dataframes, ignore_index=True)"
    ]
   },
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,42 +451,60 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_dates_to_strings(dict):\n",
+    "    for key, value in dict.items():\n",
+    "        if isinstance(value, (date, datetime)):\n",
+    "            dict[key] = value.isoformat()\n",
+    "\n",
+    "    return dict\n",
+    "\n",
+    "columns_to_convert = ['Tickets', 'Products', 'Customers', 'Employees', 'Stores', 'Divisions', 'Time', 'Cedis']\n",
+    "for column in columns_to_convert:\n",
+    "    cleaned_data[column] = cleaned_data[column].apply(lambda x: json.dumps(convert_dates_to_strings(x)) if isinstance(x, dict) else x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 323326 entries, 0 to 323325\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
       "Data columns (total 24 columns):\n",
-      " #   Column        Non-Null Count   Dtype         \n",
-      "---  ------        --------------   -----         \n",
-      " 0   KeySale       323326 non-null  object        \n",
-      " 1   KeyDate       323326 non-null  datetime64[ns]\n",
-      " 2   KeyStore      323326 non-null  object        \n",
-      " 3   KeyWarehouse  323326 non-null  object        \n",
-      " 4   KeyCustomer   323326 non-null  object        \n",
-      " 5   KeyProduct    323326 non-null  object        \n",
-      " 6   KeyEmployee   323326 non-null  object        \n",
-      " 7   KeyCurrency   323326 non-null  object        \n",
-      " 8   KeyDivision   323326 non-null  object        \n",
-      " 9   KeyTicket     323326 non-null  object        \n",
-      " 10  KeyCedi       323326 non-null  object        \n",
-      " 11  TicketId      323326 non-null  object        \n",
-      " 12  Qty           323326 non-null  float64       \n",
-      " 13  Amount        323326 non-null  float64       \n",
-      " 14  CostAmount    323326 non-null  float64       \n",
-      " 15  DiscAmount    323326 non-null  float64       \n",
-      " 16  Tickets       323326 non-null  object        \n",
-      " 17  Products      323326 non-null  object        \n",
-      " 18  Customers     323326 non-null  object        \n",
-      " 19  Employees     323326 non-null  object        \n",
-      " 20  Stores        323326 non-null  object        \n",
-      " 21  Divisions     323326 non-null  object        \n",
-      " 22  Time          323326 non-null  object        \n",
-      " 23  Cedis         323326 non-null  object        \n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   KeySale       20 non-null     object        \n",
+      " 1   KeyDate       20 non-null     datetime64[ns]\n",
+      " 2   KeyStore      20 non-null     object        \n",
+      " 3   KeyWarehouse  20 non-null     object        \n",
+      " 4   KeyCustomer   20 non-null     object        \n",
+      " 5   KeyProduct    20 non-null     object        \n",
+      " 6   KeyEmployee   20 non-null     object        \n",
+      " 7   KeyCurrency   20 non-null     object        \n",
+      " 8   KeyDivision   20 non-null     object        \n",
+      " 9   KeyTicket     20 non-null     object        \n",
+      " 10  KeyCedi       20 non-null     object        \n",
+      " 11  TicketId      20 non-null     object        \n",
+      " 12  Qty           20 non-null     float64       \n",
+      " 13  Amount        20 non-null     float64       \n",
+      " 14  CostAmount    20 non-null     float64       \n",
+      " 15  DiscAmount    20 non-null     float64       \n",
+      " 16  Tickets       20 non-null     object        \n",
+      " 17  Products      20 non-null     object        \n",
+      " 18  Customers     20 non-null     object        \n",
+      " 19  Employees     20 non-null     object        \n",
+      " 20  Stores        20 non-null     object        \n",
+      " 21  Divisions     20 non-null     object        \n",
+      " 22  Time          20 non-null     object        \n",
+      " 23  Cedis         20 non-null     object        \n",
       "dtypes: datetime64[ns](1), float64(4), object(19)\n",
-      "memory usage: 59.2+ MB\n"
+      "memory usage: 3.9+ KB\n"
      ]
     }
    ],
@@ -497,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +549,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -596,43 +615,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1|10250</td>\n",
-       "      <td>81621151.73</td>\n",
+       "      <td>1|1156</td>\n",
+       "      <td>47731.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1|10436</td>\n",
-       "      <td>19746983.41</td>\n",
+       "      <td>1|343</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1|10519</td>\n",
-       "      <td>11448286.02</td>\n",
+       "      <td>1|3748</td>\n",
+       "      <td>15138.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1|10575</td>\n",
-       "      <td>21913731.90</td>\n",
+       "      <td>1|417</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1|10580</td>\n",
-       "      <td>47565230.27</td>\n",
+       "      <td>1|569</td>\n",
+       "      <td>99689.92</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  KeyEmployee       Amount\n",
-       "0     1|10250  81621151.73\n",
-       "1     1|10436  19746983.41\n",
-       "2     1|10519  11448286.02\n",
-       "3     1|10575  21913731.90\n",
-       "4     1|10580  47565230.27"
+       "  KeyEmployee    Amount\n",
+       "0      1|1156  47731.09\n",
+       "1       1|343      0.00\n",
+       "2      1|3748  15138.65\n",
+       "3       1|417      0.00\n",
+       "4       1|569  99689.92"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,11 +662,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "combined_df.head().to_csv('data.csv')"
+    "from sqlalchemy import create_engine\n",
+    "from config import settings\n",
+    "\n",
+    "engine = create_engine(str(settings.SQLALCHEMY_DATABASE_URI))\n",
+    "\n",
+    "cleaned_data.to_sql('salesdata', con=engine, if_exists='replace', index=False)"
    ]
   }
  ],
